Bug 514308 - [5.3] Krita fails to properly remember brush smoothing settings shortly after a fresh install
Summary: [5.3] Krita fails to properly remember brush smoothing settings shortly after...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Android Android 14.x
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2026-01-08 06:59 UTC by Door1
Modified: 2026-02-18 11:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Door1 2026-01-08 06:59:46 UTC
SUMMARY
[5.3] Krita fails to properly remember brush smoothing settings shortly after a fresh install. This could unfortunately confuse new Krita users who wonder why something about their brush smoothing feels not quite right.

STEPS TO REPRODUCE
(Follow these steps exactly as written!)

1. Launch Krita 5.3 as a completely fresh install. (In other words, wipe the Krita storage and cache from the Android System UI before launching.
2. Start a drawing.
3. In the Tool Options docker, set the brush smoothing to "Stabilizer" and disable "Delay."

4. Set the "Sample Count at Max Speed" to something high like 600. (Both min and max values should change at the same time since the values are linked by default.)
4. Quit Krita
5. Launch Krita a second time and start a drawing.
6. Look at the Tools Options docker.


OBSERVED RESULT
You will notice that the Sample Count values are no longer the same: the "Sample Count at Min Speed" returns back to 50.

EXPECTED RESULT
The Sample Count values should both remain the same, at the value you set it at the first time you launched Krita.

SOFTWARE/OS VERSIONS
Android 14
arm64
Krita 5.3 nightly
git edafac89 (Jan 7, 2026)
Comment 1 Bug Janitor Service 2026-01-31 10:17:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/2627
Comment 2 Dmitry Kazakov 2026-02-18 10:41:13 UTC
Git commit 3ab8d6db8a0bb292e3a34fe84d92587bee3c705a by Dmitry Kazakov.
Committed on 18/02/2026 at 10:40.
Pushed by dkazakov into branch 'krita/6.0'.

Fix the smoothing sliders to actually save their values

When a KisAspectRatioLocker is used to lock the sliders, their
direct signals should not be used. The signals of the locker should
be used instead.

The patch also adds proper documentation to
KisAspectRatioLocker :)

M  +78   -0    libs/ui/kis_aspect_ratio_locker.h
M  +8    -4    plugins/tools/basictools/kis_tool_brush.cc

https://invent.kde.org/graphics/krita/-/commit/3ab8d6db8a0bb292e3a34fe84d92587bee3c705a
Comment 3 Dmitry Kazakov 2026-02-18 10:42:06 UTC
Git commit fe371134688602ddb8e825f49e985f3ddd58d4d0 by Dmitry Kazakov.
Committed on 18/02/2026 at 10:41.
Pushed by dkazakov into branch 'master'.

Fix the smoothing sliders to actually save their values

When a KisAspectRatioLocker is used to lock the sliders, their
direct signals should not be used. The signals of the locker should
be used instead.

The patch also adds proper documentation to
KisAspectRatioLocker :)

M  +78   -0    libs/ui/kis_aspect_ratio_locker.h
M  +8    -4    plugins/tools/basictools/kis_tool_brush.cc

https://invent.kde.org/graphics/krita/-/commit/fe371134688602ddb8e825f49e985f3ddd58d4d0
Comment 4 Dmitry Kazakov 2026-02-18 11:00:48 UTC
Git commit 0ba4f17846be318fc146984d9abec427dc36dd41 by Dmitry Kazakov.
Committed on 18/02/2026 at 11:00.
Pushed by dkazakov into branch 'release/6.0.0'.

Fix the smoothing sliders to actually save their values

When a KisAspectRatioLocker is used to lock the sliders, their
direct signals should not be used. The signals of the locker should
be used instead.

The patch also adds proper documentation to
KisAspectRatioLocker :)

M  +78   -0    libs/ui/kis_aspect_ratio_locker.h
M  +8    -4    plugins/tools/basictools/kis_tool_brush.cc

https://invent.kde.org/graphics/krita/-/commit/0ba4f17846be318fc146984d9abec427dc36dd41