Fix the smoothing sliders to actually save their values

When a KisAspectRatioLocker is used to lock the sliders, their
direct signals should not be used. The signals of the locker should
be used instead.

The patch also adds proper documentation to
KisAspectRatioLocker :)

BUG:514308