plugins/tools/basictools/kis_tool_brush.cc
@@ -432,10 +432,7 @@ QWidget * KisToolBrush::createOptionWidget()
     updateSmoothnessDistanceLabel();
     // make sure that initialization of the value happens **after** we
     // have configured the slider's range in updateSmoothnessDistanceLabel()
-    connect(m_sliderSmoothnessDistanceMin, SIGNAL(valueChanged(qreal)), SLOT(slotSetSmoothnessDistanceMin(qreal)));
     m_sliderSmoothnessDistanceMin->setValue(smoothingOptions()->smoothnessDistanceMin());
-
-    connect(m_sliderSmoothnessDistanceMax, SIGNAL(valueChanged(qreal)), SLOT(slotSetSmoothnessDistanceMax(qreal)));
     m_sliderSmoothnessDistanceMax->setValue(smoothingOptions()->smoothnessDistanceMax());
 
     // Create KoAspectButton
@@ -443,7 +440,6 @@ QWidget * KisToolBrush::createOptionWidget()
     m_distanceAspectButton->setKeepAspectRatio(smoothingOptions()->smoothnessDistanceKeepAspectRatio());
     m_distanceAspectButton->setSizePolicy(QSizePolicy::Fixed, QSizePolicy::Fixed);
     m_distanceAspectButton->setMinimumSize(QSize(24, 24));
-    connect(m_distanceAspectButton, SIGNAL(keepAspectRatioChanged(bool)), SLOT(slotSetSmoothnessDistanceKeepAspectRatio(bool)));
 
     // Add distanceLabels
     QWidget* distanceLabelWidget = new QWidget(optionsWidget);
@@ -467,6 +463,14 @@ QWidget * KisToolBrush::createOptionWidget()
 
     KisAspectRatioLocker *distanceAspectLocker = new KisAspectRatioLocker(this);
     distanceAspectLocker->connectSpinBoxes(m_sliderSmoothnessDistanceMin, m_sliderSmoothnessDistanceMax, m_distanceAspectButton);
+
+    connect(distanceAspectLocker, &KisAspectRatioLocker::aspectButtonToggled,
+        this, &KisToolBrush::slotSetSmoothnessDistanceKeepAspectRatio);
+
+    connect(distanceAspectLocker, &KisAspectRatioLocker::sliderValueChanged, this, [this]() {
+        slotSetSmoothnessDistanceMin(m_sliderSmoothnessDistanceMin->value());
+        slotSetSmoothnessDistanceMax(m_sliderSmoothnessDistanceMax->value());
+    });
 
     // Finish stabilizer curve
     m_chkFinishStabilizedCurve = new QCheckBox(optionsWidget);
